--- a/netlify.toml
+++ b/netlify.toml
@@ -6,3 +6,9 @@
   from = "/api/*"
   status = 200
   to = "/.netlify/functions/api"
+
+  [[redirects]]
+  force = true
+  from = "/.netlify/functions/api"
+  status = 200
+  to = "/"
